<resources>
    <string name="app_name">Погода</string>
    <string name="edit_text">Введите широту</string>
    <string name="edit_shirota">Введите широту в формате ХХ.ХХХХ</string>
    <string name="edit_dolgota">Ввведите долготу в формате XХХ.ХХХХ</string>
    <string name="update">Найти</string>
    <string name="humidity">Влажность:</string>
    <string name="wind_speed">Скорость ветра:</string>
    <string name="uncorrect">Неверные координаты</string>
    <string name="notDefined">Локация не определена</string>
    <string name="enterCity">Введите название города</string>
    <string name="unncorrect">Неверное название населенного пункта</string>
    <string name="connectionProblem">Проблемы с интернетом</string>
    <string name="probability">Вероятность осадков:</string>
    <string name="byHour">По часам</string>
    <string name="byDay">По дням</string>
    <string name="wind_symbol">Ветер</string>
    <string name="windMeasure">м/с</string>
    <string name="celcius">°C</string>
    <string name="isTaken">Иконки взяты с:</string>
    <string name="action_settings">Настройки</string>
    <string name="action_share">Поделится</string>
    <string name="send_to">yyy</string>

    <string name="settings">Настройки</string>
    <string name="unit">ЕДЕНИЦЫ</string>
    <string name="temperature">Температура</string>
    <string name="mc">м/с</string>
    <string name="km.h">км/ч</string>
    <string name="m.h">миль/ч</string>
    <string name="farengeit">°F</string>
    <string name="network">НАСТРОЙКИ СЕТИ</string>
    <string name="time_format">Формат времени</string>
    <string name="h12">12 час</string>
    <string name="h24">24 час</string>
    <string name="dm">ДД:ММ</string>
    <string name="md">ММ:ДД</string>
    <string name="wi_fi">Работать только через Wi-Fi</string>
    <string name="dateFormat">Формат даты</string>
    <string name="on">ВКЛ</string>
    <string name="off">ВЫКЛ</string>
    <string name="preference">mySattings</string>
    <string name="apply">Применить</string>
    <string name="connectionWifiProblem">Подключение по Wi-Fi отсутствует</string>
    <string name="showMap">Показать на карте</string>
    <string name="myData">мои данные</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="wifi">WI-FI</string>


</resources>