<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.weather.Settings">

    <LinearLayout
        android:id="@+id/units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/fon2"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        android:text="@string/unit"/>

        <RadioGroup
            android:id="@+id/radio_group_temp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:text="@string/temperature"/>

            <RadioButton
                android:id="@+id/celcius"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/celcius"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2"/>

            <RadioButton
                android:id="@+id/farengeit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/farengeit"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2" />

        </RadioGroup>
        <RadioGroup
            android:id="@+id/radio_group_speed"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:text="@string/wind_speed"/>

            <RadioButton
                android:id="@+id/m.c"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mc"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2"/>

            <RadioButton
                android:id="@+id/km.h"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/km.h"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2" />

            <RadioButton
                android:id="@+id/m.h"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/m.h"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2"
                />
        </RadioGroup>
        <RadioGroup
            android:id="@+id/radio_group_timeFormat"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:text="@string/time_format"/>

            <RadioButton
                android:id="@+id/h12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/h12"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2"/>

            <RadioButton
                android:id="@+id/h24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/h24"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_group_dateFormat"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:text="@string/dateFormat"/>

            <RadioButton
                android:id="@+id/dm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dm"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2"/>

            <RadioButton
                android:id="@+id/md"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/md"
                android:textColor="@color/white"
                android:button="@null"
                android:onClick="changePreferences"
                android:background="@drawable/toggle_background2" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/fon2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:textSize="30sp"
            android:text="@string/network"/>

        <Switch
            android:id="@+id/wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/wi_fi"
            android:onClick="onWiFiClicked"
            android:textOn="On"
            android:textOff="Off"
            />

        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="end"
        android:gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="OK"
            android:onClick="onClickOk"/>
        <Button
            android:id="@+id/apply"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:enabled="false"
            android:onClick="apply"/>
    </LinearLayout>


</LinearLayout>
