<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/enterCity"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/enterCity"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/buttonRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/update"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="..."
            android:textColor="@color/colorPrimary"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/city_full_name"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:gravity="center_horizontal"
            android:text="..."
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingLeft="45dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/full_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..."
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/clearday"
                    />

                <TextView
                    android:id="@+id/textviewTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="5 C"
                    android:textColor="@color/white"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/wind_speed"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/probability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/probability"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..."
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textSize="15dp" />

        </LinearLayout>

        <RadioGroup
            android:checkedButton="@+id/byDay"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_out_line"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/byDay"
                android:background="@drawable/toggle_widget_background"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/byDay"
                android:textColor="@color/white"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/byHour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/byHour"
                android:textColor="@color/white"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
        </android.support.v7.widget.RecyclerView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/isTaken"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textSize="25dp" />
        <Button
            android:id="@+id/showOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="@string/showMap"
            android:textSize="15dp"
            android:onClick="showMap"/>
    </LinearLayout>
</ScrollView>